Added a footer and updated about image

--- a/server/.env.development
+++ b/server/.env.development
@@ -1,4 +1,4 @@
-BASE_URL=https://acr-website-391905.nn.r.appspot.com
+BASE_URL=http://localhost:5000
 EMAIL_USER=rustyvolts@gmail.com
 EMAIL_PASS=fjblmbbambhkcsll
 RECIPIENT_EMAIL=rustyvolts@gmail.com
