--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.4"
+    "@material-ui/core": "^4.12.4",
+    "react-icons": "^4.10.1"
   }
 }
