2mb max upload for resumes

--- a/server/app.yaml
+++ b/server/app.yaml
@@ -6,4 +6,4 @@ env_variables:
   BASE_URL: "https://acr-website-391905.nn.r.appspot.com"
   EMAIL_USER: "rustyvolts@gmail.com"
   EMAIL_PASS: "fjblmbbambhkcsll"
-  RECIPIENT_EMAIL: "rustyvolts@gmail.com"
+  RECIPIENT_EMAIL: "sobhi14@gmail.com"
