--- a/server/.env.production
+++ b/server/.env.production
@@ -1,4 +1,4 @@
 BASE_URL=https://acr-website-391905.nn.r.appspot.com
 EMAIL_USER=rustyvolts@gmail.com
 EMAIL_PASS=fjblmbbambhkcsll
-RECIPIENT_EMAIL=rustyvolts@gmail.com
+RECIPIENT_EMAIL=sobhi14@gmail.com
